--- a/.github/workflows/weka-codind-stats-workflow.yml
+++ b/.github/workflows/weka-codind-stats-workflow.yml
@@ -3,14 +3,15 @@ name: Waka Readme
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '0 0 * * *'
+    #run in every 2 hours
+    - cron: '0 */2 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: musfique113/musfique113@main
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
