--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -3,7 +3,9 @@ name: Waka Readme2
 on:
   schedule:
     # Runs at 12am IST
-    - cron: '30 18 * * *'
+    #- cron: '30 18 * * *'
+    - cron: '0 */6 * * *'
+    
   workflow_dispatch:
 jobs:
   update-readme:
