--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -16,3 +16,18 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_UPDATED_DATE: "True"
+          UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
+          SHOW_COMMIT: True
+          SHOW_DAYS_OF_WEEK: True
+          SHOW_LANGUAGE_PER_REPO: True
+          SHOW_TIMEZONE: True
+          SHOW_LANGUAGE: True
+          SHOW_PROJECTS: True
+          SHOW_OS: True
+          SHOW_EDITORS: True
+          SHOW_LINES_OF_CODE: True
+          SHOW_TOTAL_CODE_TIME: True
+          SHOW_PROFILE_VIEWS: False
+          SHOW_SHORT_INFO: True
+          SHOW_LOC_CHART: False
