--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -32,3 +32,9 @@ jobs:
           SHOW_PROFILE_VIEWS: False
           SHOW_SHORT_INFO: True
           SHOW_LOC_CHART: False
+          SHOW_TITLE: true
+          BLOCKS: ->
+          TIME_RANGE: all_time
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
+          LANG_COUNT: 10
