--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -34,7 +34,7 @@ jobs:
           SHOW_LOC_CHART: False
           SHOW_TITLE: true
           BLOCKS: ->
-          TIME_RANGE: all_time
+          TIME_RANGE: last_7_days
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
           LANG_COUNT: 10
