--- a/.github/workflows/waka2.yml
+++ b/.github/workflows/waka2.yml
@@ -1,1 +1,40 @@
+name: Waka Readme2
 
+on:
+  schedule:
+    # Runs at 12am IST
+    #- cron: '30 18 * * *'
+    - cron: '0 */6 * * *'
+    
+  workflow_dispatch:
+jobs:
+  update-readme:
+    name: Update Readme with Metrics
+    runs-on: ubuntu-latest
+    steps:
+      - uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          COMMIT_MESSAGE: "Update README.md by 🤖"
+          SHOW_UPDATED_DATE: "True"
+          UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
+          SHOW_COMMIT: True
+          SHOW_DAYS_OF_WEEK: True
+          SHOW_LANGUAGE_PER_REPO: True
+          SHOW_TIMEZONE: True
+          SHOW_LANGUAGE: True
+          SHOW_PROJECTS: True
+          SHOW_OS: True
+          SHOW_EDITORS: True
+          SHOW_LINES_OF_CODE: True
+          SHOW_TOTAL_CODE_TIME: True
+          SHOW_PROFILE_VIEWS: False
+          SHOW_SHORT_INFO: True
+          SHOW_LOC_CHART: False
+          SHOW_TITLE: true
+          BLOCKS: ->
+          TIME_RANGE: last_7_days
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
+          LANG_COUNT: 10
