--- a/.github/workflows/waka2.yml
+++ b/.github/workflows/waka2.yml
@@ -1,4 +1,4 @@
-name: Waka Readme2
+name: Waka Readme
 
 on:
   schedule:
@@ -7,15 +7,17 @@ on:
     - cron: '0 */6 * * *'
     
   workflow_dispatch:
+
 jobs:
   update-readme:
     name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: athul/waka-readme@master
+      - name: Update Readme for Waka Readme1
+        uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY_1 }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN_1 }}
           COMMIT_MESSAGE: "Update README.md by 🤖"
           SHOW_UPDATED_DATE: "True"
           UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
@@ -33,7 +35,18 @@ jobs:
           SHOW_SHORT_INFO: True
           SHOW_LOC_CHART: False
           SHOW_TITLE: true
-          BLOCKS: ->
+          BLOCKS: ""
+          TIME_RANGE: last_7_days
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
+          LANG_COUNT: 10
+      - name: Update Readme for Waka Readme2
+        uses: athul/waka-readme@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY_2 }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN_2 }}
+          SHOW_TITLE: true
+          BLOCKS: ""
           TIME_RANGE: last_7_days
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
