--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -17,8 +17,10 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           COMMIT_MESSAGE: "Update README.md by 🤖"
+          SHOW_LINES_OF_CODE: False
+          SHOW_TOTAL_CODE_TIME: True
           SHOW_UPDATED_DATE: "True"
-          UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
+          UPDATED_DATE_FORMAT: "%d/%m/%Y @%H:%M:%S"
           SHOW_COMMIT: True
           SHOW_DAYS_OF_WEEK: True
           SHOW_LANGUAGE_PER_REPO: True
@@ -26,12 +28,11 @@ jobs:
           SHOW_LANGUAGE: True
           SHOW_PROJECTS: True
           SHOW_OS: True
-          SHOW_EDITORS: True
-          SHOW_LINES_OF_CODE: True
-          SHOW_TOTAL_CODE_TIME: True
+          SHOW_EDITORS: True 
           SHOW_PROFILE_VIEWS: False
-          SHOW_SHORT_INFO: True
+          SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
+          
           SHOW_TITLE: true
           BLOCKS: ->
           TIME_RANGE: last_7_days
