--- a/.github/workflows/waka2.yml
+++ b/.github/workflows/waka2.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Update Readme for Waka Readme1
         uses: anmol098/waka-readme-stats@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY_1 }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN_1 }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN}}
           COMMIT_MESSAGE: "Update README.md by 🤖"
           SHOW_UPDATED_DATE: "True"
           UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
@@ -34,19 +34,13 @@ jobs:
           SHOW_PROFILE_VIEWS: False
           SHOW_SHORT_INFO: True
           SHOW_LOC_CHART: False
-          SHOW_TITLE: true
-          BLOCKS: ""
-          TIME_RANGE: last_7_days
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
-          LANG_COUNT: 10
       - name: Update Readme for Waka Readme2
         uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY_2 }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN_2 }}
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY}}
+          GH_TOKEN: ${{ secrets.GH_TOKEN}}
           SHOW_TITLE: true
-          BLOCKS: ""
+          BLOCKS: ->
           TIME_RANGE: last_7_days
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
