--- a/.github/workflows/activity.yml
+++ b/.github/workflows/activity.yml
@@ -15,3 +15,6 @@ jobs:
       - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          MAX_LINES: 5
+          COMMIT_MSG: 'Activity updated by 🤖'
