--- a/.github/workflows/waka2.yml
+++ b/.github/workflows/waka2.yml
@@ -1,47 +1,42 @@
-name: Waka Readme Extended
+name: Waka Readme by Athul
+# https://github.com/athul/waka-readme
 
 on:
-  schedule:
-    # Runs at 12am IST
-    #- cron: '30 18 * * *'
-    - cron: '0 */6 * * *'
-    
+  # for manual workflow trigger
   workflow_dispatch:
+  schedule:
+    # runs at 12 AM UTC (5:30 AM IST)
+    - cron: "0 0 * * *"
 
 jobs:
   update-readme:
-    name: Update Readme with Metrics
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
-      - name: Update Readme for Waka Readme1
-        uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN}}
-          COMMIT_MESSAGE: "Update README.md by 🤖"
-          SHOW_UPDATED_DATE: "True"
-          UPDATED_DATE_FORMAT: "%Y-%m-%d @%H:%M:%S"
-          SHOW_COMMIT: True
-          SHOW_DAYS_OF_WEEK: True
-          SHOW_LANGUAGE_PER_REPO: True
-          SHOW_TIMEZONE: True
-          SHOW_LANGUAGE: True
-          SHOW_PROJECTS: True
-          SHOW_OS: True
-          SHOW_EDITORS: True
-          SHOW_LINES_OF_CODE: True
-          SHOW_TOTAL_CODE_TIME: True
-          SHOW_PROFILE_VIEWS: False
-          SHOW_SHORT_INFO: True
-          SHOW_LOC_CHART: False
-      - name: Update Readme for Waka Readme2
-        uses: athul/waka-readme@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY}}
-          GH_TOKEN: ${{ secrets.GH_TOKEN}}
-          SHOW_TITLE: true
-          BLOCKS: ->
-          TIME_RANGE: last_7_days
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
-          LANG_COUNT: 10
+          GH_TOKEN: ${{ secrets.GH_TOKEN }} # optional if on profile readme
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }} # required
+          ### meta
+          API_BASE_URL: https://wakatime.com/api # optional
+          REPOSITORY: YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME # optional
+          ### content
+          SHOW_TITLE: true # optional
+          SECTION_NAME: waka # optional
+          BLOCKS: -> # optional
+          CODE_LANG: rust # optional
+          TIME_RANGE: all_time # optional
+          LANG_COUNT: 10 # optional
+          SHOW_TIME: true # optional
+          SHOW_TOTAL: true # optional
+          SHOW_MASKED_TIME: false # optional
+          STOP_AT_OTHER: true # optional
+          ### commit
+          COMMIT_MESSAGE: Updated waka-readme graph with new metrics # optional
+          TARGET_BRANCH: master # optional
+          TARGET_PATH: README.md # optional
+          COMMITTER_NAME: GitHubActionBot # optional
+          COMMITTER_EMAIL: action-bot@github.com # optional
+          AUTHOR_NAME: YOUR_NAME # optional
+          AUTHOR_EMAIL: YOUR@EMAIL.com # optional
+          # you can populate email-id with secretes instead
