--- a/.github/workflows/waka.yml
+++ b/.github/workflows/waka.yml
@@ -2,9 +2,8 @@ name: Waka Readmeby Anmol (main)
 
 on:
   schedule:
-    # Runs at 12am IST
-    #- cron: '30 18 * * *'
-    - cron: '0 */6 * * *'
+    # Runs every 12 hours
+    - cron: '0 */12 * * *'
     
   workflow_dispatch:
 jobs:
